# modenv

./: .gitignore  .golangci.yml  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  NOTICE  README.md  go.mod
.github/workflows/: ci.yml
cmd/modenv/: BUILD.bazel  main.go
configs/: config.yaml
pkg/modenv/: BUILD.bazel  modenv.go  modenv_test.go
test/: BUILD.bazel  README.md  integration_test.go
test/configs/default/: .env.toml
test/configs/defensive/: .env.toml
test/configs/integration/: .env.local.toml  .env.toml
test/configs/local-override/: .env.local.toml  .env.production.toml
test/configs/missing/: .gitkeep
test/configs/prefix-test/: .env.toml
test/configs/runtime/: .env.production.toml  .env.toml
test/configs/secrets/: .env.toml
test/configs/struct/: .env.toml
