# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "modenv_lib",
    srcs = ["main.go"],
    importpath = "github.com/rrmcguinness/modenv/cmd/modenv",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/modenv",
        "@com_github_burntsushi_toml//:toml",
    ],
)

go_binary(
    name = "modenv",
    embed = [":modenv_lib"],
    visibility = ["//visibility:public"],
)
